# foundry

./: .gitmodules  BUCK  CLAUDE.md  README.md  TODO.md  flake.nix  jbreenconsulting_extracted.json  me.txt  spago.yaml
cpp/evring/: sigil.h
dhall/: DischargeProof.dhall  Pipeline.dhall  Resource.dhall  package.dhall
docs/: BRAND_INGESTION_IMPLEMENTATION.md  BRAND_INGESTION_TODO.md  CROSS_REPOSITORY_ALIGNMENT.md  INTEGRATION_COMPASS_HYDROGEN.md  PRODUCTION_INTEGRATION_PLAN.md  SIGIL_PROTOCOL.md  TECHNICAL_SPECIFICATIONS.md  sentience-brand-guide-pages-1-20.md
docs/INTERNAL/: CONSTRAINT_AUDIT.md
haskell/: cabal.project
haskell/foundry-core/: LICENSE  foundry-core.cabal
haskell/foundry-core/src/Foundry/: Core.hs
haskell/foundry-core/src/Foundry/Core/: Agent.hs  Brand.hs  Effect.hs  GPU.hs  Text.hs
haskell/foundry-core/src/Foundry/Core/Agent/: Allocation.hs  Budget.hs  Context.hs  Graded.hs  ILP.hs  Permission.hs  Solver.hs  Task.hs
haskell/foundry-core/src/Foundry/Core/Brand/: AgentContext.hs  Color.hs  Complete.hs  Completion.hs  Customer.hs  Editorial.hs  Gradient.hs  GraphicElements.hs  Hierarchy.hs  Identity.hs  Imagery.hs  Layout.hs  Logo.hs  Material.hs  Ontology.hs  Overview.hs  Palette.hs  Provenance.hs  Source.hs  Spacing.hs  Strategy.hs  Tagline.hs  Theme.hs  Typography.hs  UIElements.hs  Voice.hs
haskell/foundry-core/src/Foundry/Core/Brand/Gradient/: Rules.hs
haskell/foundry-core/src/Foundry/Core/Brand/Logo/: Sizing.hs  Usage.hs
haskell/foundry-core/src/Foundry/Core/Brand/UIElements/: Accessibility.hs  Buttons.hs
haskell/foundry-core/src/Foundry/Core/Coeffect/: Discharge.hs  Types.hs
haskell/foundry-core/src/Foundry/Core/Effect/: CoEffect.hs  Graded.hs
haskell/foundry-core/src/Foundry/Core/Effects/: Graded.hs
haskell/foundry-core/src/Foundry/Core/Evring/: Event.hs  Handle.hs  Machine.hs  Ring.hs  Sigil.hs  Trace.hs  Wai.hs  Zmtp.hs
haskell/foundry-core/src/Foundry/Core/Evring/Wai/: Conn.hs  Loop.hs  MultiCore.hs  MultiCoreRR.hs  Pool.hs  Server.hs
haskell/foundry-core/src/Foundry/Core/GPU/: Command.hs  Identified.hs  Patch.hs  Renderer.hs
haskell/foundry-core/src/Foundry/Core/Wire/: Decode.hs  Encode.hs  Types.hs  Varint.hs
haskell/foundry-core/test/: Main.hs
haskell/foundry-core/test/Foundry/Core/Evring/: TestSigil.hs
haskell/foundry-core/test/Test/Foundry/Core/: Agent.hs  Brand.hs  Effect.hs  Wire.hs
haskell/foundry-core/test/Test/Foundry/Core/Agent/: Allocation.hs  Graded.hs
haskell/foundry-core/test/Test/Foundry/Core/Brand/: Editorial.hs  Generators.hs  GraphicElements.hs  Security.hs  Strategy.hs  Tagline.hs  UIElements.hs
haskell/foundry-extract/: foundry-extract.cabal
haskell/foundry-extract/src/Foundry/: Extract.hs
haskell/foundry-extract/src/Foundry/Extract/: Color.hs  Compose.hs  Spacing.hs  Types.hs  Typography.hs  Visual.hs  Voice.hs
haskell/foundry-extract/src/Foundry/Extract/Color/: CSS.hs  Cluster.hs  Role.hs
haskell/foundry-extract/test/: Main.hs
haskell/foundry-scraper/: foundry-scraper.cabal
haskell/foundry-scraper/app/: Main.hs
haskell/foundry-scraper/src/Foundry/: Scraper.hs
haskell/foundry-scraper/src/Foundry/Scraper/: Client.hs  Config.hs  Protocol.hs
haskell/foundry-scraper/test/: Main.hs
haskell/foundry-storage/: foundry-storage.cabal
haskell/foundry-storage/bench/: Main.hs
haskell/foundry-storage/src/Foundry/: Storage.hs
haskell/foundry-storage/src/Foundry/Storage/: DuckDB.hs  HAMT.hs  Postgres.hs  Types.hs
haskell/foundry-storage/test/: Main.hs
haskell/foundry-storage/test/Test/Foundry/Storage/: HAMT.hs
haskell/metxt-core/: metxt-core.cabal
haskell/metxt-core/src/Metxt/: Core.hs
haskell/metxt-core/src/Metxt/Core/: Agent.hs  Brand.hs  Effect.hs
haskell/metxt-core/src/Metxt/Core/Agent/: Budget.hs  Context.hs  Permission.hs
haskell/metxt-core/src/Metxt/Core/Brand/: Editorial.hs  Identity.hs  Logo.hs  Palette.hs  Provenance.hs  Spacing.hs  Strategy.hs  Typography.hs  Voice.hs
haskell/metxt-core/src/Metxt/Core/Brand/Gradient/: Rules.hs
haskell/metxt-core/src/Metxt/Core/Brand/Logo/: Sizing.hs  Usage.hs
haskell/metxt-core/src/Metxt/Core/Effect/: CoEffect.hs  Graded.hs
haskell/metxt-core/test/: Main.hs
lean/: Foundry.lean  Metxt.lean  lake-manifest.json  lakefile.lean
lean/Foundry/: Brand.lean  Budget.lean  Continuity.lean  Cornell.lean  Pipeline.lean  Timestamp.lean
lean/Foundry/Continuity/: Authority.lean  Cache.lean  CodeGen.lean  Coeffect.lean  Crypto.lean  Derivation.lean  ExtractContinuity.lean  Isolation.lean  Main.lean  Parametricity.lean  Protocol.lean  Toolchain.lean  Trust.lean  Witness.lean
lean/Foundry/Continuity/CodeGen/: Cpp.lean  Doc.lean  Extract.lean  Haskell.lean  Rust.lean
lean/Foundry/Continuity/CodeGen/Emit/: Haskell.lean
lean/Foundry/Cornell/: Basic.lean  Extract.lean  ExtractCpp.lean  ExtractHaskell.lean  ExtractNix.lean  ExtractSigil.lean  ExtractStateMachine.lean  ExtractZmtp.lean  ExtractZmtpHaskell.lean  Git.lean  GitTransport.lean  Http2.lean  Http3.lean  Nix.lean  Parser.lean  Proofs.lean  Protobuf.lean  Protocol.lean  SSP.lean  Scanner.lean  Sigil.lean  StateMachine.lean  Zmtp.lean
lean/Foundry/Sigil/: Sigil.lean
lean/Metxt/: Brand.lean  Pipeline.lean
nix/modules/: default.nix
nix/overlays/: default.nix
purescript/foundry-extension/src/Extension/: Wire.purs
purescript/metxt-playground/: spago.yaml
purescript/metxt-playground/src/Playground/Scene/: Primitive.purs
scraper/: package-lock.json  package.json  tsconfig.json
scraper/src/: index.ts  scraper.ts  server.ts  types.ts  visual.ts
src/Brand/: Brand.purs  Editorial.purs  Gradient.purs  GraphicElements.purs  Imagery.purs  Layout.purs  Logo.purs  Modes.purs  Palette.purs  Provenance.js  Provenance.purs  Spacing.purs  Strategy.purs  Typography.purs  UIElements.purs  Voice.purs
src/Brand/Editorial/: Contact.purs  Spelling.purs
src/Brand/Gradient/: Rules.purs
src/Brand/Logo/: Sizing.purs  Usage.purs
src/Brand/Strategy/: Compound.purs
src/Brand/UIElements/: Accessibility.purs  Buttons.purs
(+17 files in other folders)
